--- a/styles.css
+++ b/styles.css
@@ -7,31 +7,24 @@ body {
   font-family: "Work Sans", sans-serif;
 }
 
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+#message {
+  font-size: 70px;
+  padding: 20vh 10vw;
+  margin: 0;
 }
 
-img.nameplate {
-  max-width: 100vw;
+.nameplate {
+  position: fixed;
+  bottom: 50px;
+  left: 10vw;
+}
+
+.tagline {
+  margin-top: 0;
+  font-size: 14px;
 }
 
 /* Animation classes */
-.zoom-out {
-  animation: zoomOut 1s ease-in-out 500ms forwards;
-}
-
-@keyframes zoomOut {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(0.8);
-  }
-}
 
 .fade-in {
   opacity: 0;
@@ -41,5 +34,22 @@ img.nameplate {
 @keyframes fadeIn {
   to {
     opacity: 1;
+  }
+}
+
+/* Mobile view adjustments */
+@media screen and (max-width: 768px) {
+  #message {
+    font-size: 48px;
+    padding: 10vh 5vw;
+  }
+
+  .nameplate {
+    bottom: 50px;
+    left: 5vw;
+  }
+
+  .tagline {
+    font-size: 16px;
   }
 }
